HelloUltraviolet/Source/Fixtures/RejectedSource/Coverage.uv
//! Coverage checks for rejected-source fixture metadata.

public procedure expectedRejectedSourceFixtureCount() -> usize {
    return 351usize
}

public procedure rejectedSourceFixtureCount() -> usize {
    return sourceTextRejectedSourceFixtureCount() +
        parsingRejectedSourceFixtureCount() +
        namesRejectedSourceFixtureCount() +
        proceduresRejectedSourceFixtureCount() +
        statementsRejectedSourceFixtureCount() +
        expressionsRejectedSourceFixtureCount() +
        patternsRejectedSourceFixtureCount() +
        polymorphismRejectedSourceFixtureCount() +
        ffiRejectedSourceFixtureCount() +
        keysRejectedSourceFixtureCount() +
        parallelismRejectedSourceFixtureCount()
}

public procedure validatedRejectedSourceFixtureCount() -> usize {
    return validatedSourceTextRejectedSourceFixtureCount() +
        validatedParsingRejectedSourceFixtureCount() +
        validatedNamesRejectedSourceFixtureCount() +
        validatedProceduresRejectedSourceFixtureCount() +
        validatedStatementsRejectedSourceFixtureCount() +
        validatedExpressionsRejectedSourceFixtureCount() +
        validatedPatternsRejectedSourceFixtureCount() +
        validatedPolymorphismRejectedSourceFixtureCount() +
        validatedFFIRejectedSourceFixtureCount() +
        validatedKeysRejectedSourceFixtureCount() +
        validatedParallelismRejectedSourceFixtureCount()
}

public procedure rejectedSourceFixturesAreIndexed() -> bool {
    return rejectedSourceFixtureCount() == expectedRejectedSourceFixtureCount() &&
        validatedRejectedSourceFixtureCount() == expectedRejectedSourceFixtureCount()
}
